# SeaBattle

./: CMakeLists.txt  SeaBattle.sln
SeaBattle/: Func.cpp  Header.h  SeaBattle.vcxproj  SeaBattle.vcxproj.filters  Source.cpp  TextField.cpp
src/: Header.h
